New fancy stylesheet and updated game logic

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 
 <body>
 
-    <h1>MEMORY GAME</h1>
     <section class="main-board">
-        <div class="turn-count"></div>
-        <div class="points"></div>
+        <div class="stats">
+            <div class="turn-count"></div>
+            <div class="points"></div>
+        </div>
         <div class="board">
 
         </div>
