--- a/memory.html
+++ b/memory.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Marvel Memory Game</title>
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="memory.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
     </section>
 
 
-    <script src="js.js"></script>
+    <script src="memory.js" type="module"></script>
 </body>
 
 </html>
